[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quool"
version = "7.0.13"
description = "Quantitative Toolkit - a helper in quant developing"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "ppoak", email = "ppoak@foxmail.com" }
]
keywords = ["quant", "framework", "finance"]
classifiers = ["quant", "framework", "finance"]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "joblib>=1.5.2",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "markdown>=3.8.2",
    "retry>=0.9.2",
    "apscheduler>=3.11.0",
    "duckdb>=1.0",
    "tabulate>=0.9.0",
    "parquool>=0.0.10",
]

[project.urls]
Homepage = "https://github.com/ppoak/quool"

[tool.setuptools.packages.find]
include = ["quool"]
